windowbox/static/css/main.scss
@import 'variables';
@import 'mixins';
@import 'reset';

body {
    color: $body_color_text;
    background-color: $body_color_bg;
    font: 10px $body_font_stack;
}

a {
    text-decoration: none;
}

main {
    display: block;
    background-color: $content_color_bg;
}

#topbar {
    padding: 13px 0;
    background: $body_color_accent;

    .link-root img {
        display: block;
        width: 100px;
        height: 100px;
    }
}

#bottombar {
    @include pagewrap;
    margin-top: 20px;
    margin-bottom: 20px;
    color: $footer_color_text;
    font-size: 1.4em;
    text-align: center;

    a {
        color: $body_color_accent;
    }
}

.pagewrap {
    @include pagewrap;
}

@import 'index';
@import 'single';

